--- a/elapp/src/main/res/layout/activity_main_mask.xml
+++ b/elapp/src/main/res/layout/activity_main_mask.xml
@@ -4,10 +4,8 @@
     android:id="@+id/activity_main_mask"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#1111"
     tools:context="com.easyvaas.elapp.ui.MainMaskActivity">
+
 
 </RelativeLayout>
