--- a/elapp/src/main/res/layout/activity_splash.xml
+++ b/elapp/src/main/res/layout/activity_splash.xml
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="120dp"
-        android:background="@drawable/splash" />
+        android:background="@drawable/default_banner" />
 
 
     <Button
