--- a/elapp/src/main/res/layout/fragment_home_live.xml
+++ b/elapp/src/main/res/layout/fragment_home_live.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f8f8f8"
@@ -12,31 +12,40 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/view_title_home_live"/>
+        <include layout="@layout/view_title_home_live" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/line_gray"/>
+            android:background="@color/line_gray" />
 
-        <include layout="@layout/layout_common_tablayout"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/tab_bg_white"
+            app:tabIndicatorColor="@color/base_purplish"
+            app:tabIndicatorHeight="2dp"
+            app:tabMinWidth="60dp"
+            app:tabSelectedTextColor="@color/text_color_purplish"
+            app:tabTextColor="@color/text_color_gray" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/rl_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00000000"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginRight="16dp"
+        android:background="#00000000">
 
 
         <ImageView
@@ -46,7 +55,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/btn_image_text"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/iv_start_video_live"
@@ -55,7 +64,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/btn_video_live"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/iv_live_start"
@@ -63,7 +72,7 @@
             android:layout_height="44dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/btn_launch_n"/>
+            android:src="@drawable/btn_launch_n" />
     </RelativeLayout>
 
 
