--- a/elapp/src/main/res/values/theme.xml
+++ b/elapp/src/main/res/values/theme.xml
@@ -133,7 +133,7 @@
         <item name="windowNoTitle">true</item>
     </style>
     <style name="SplashBaseTheme" parent="FullscreenTheme">
-        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
