--- a/elapp/src/main/res/layout/empty_feature_no_open.xml
+++ b/elapp/src/main/res/layout/empty_feature_no_open.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f8f8f8">
+    android:background="#f8f8f8"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,13 +16,13 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/icon_smile"/>
+            android:src="@drawable/icon_smile" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/feature_no_open_prompt"
-            android:textColor="@color/text_color_gray"/>
+            android:textColor="@color/text_color_gray" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
