--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -177,5 +177,6 @@
     <color name="user_tag_text_color">#4281ad</color>
     <color name="input_bg">#80303030</color>
     <color name="vip_text">#672f87</color>
+    <color name="fire_eyeballs_color">#ff6820</color>
 
 </resources>
