修改 Tower 上面 9.精品视频/观看人数字体颜色
10.市场/板块间距。股票列表。标题加分割线。股票代码字体颜色

11.市场／涨跌幅之间有间距，最后一排没有线。

12.导航栏有分割线

13.全球股票不能点击进入详情

14.底部tab线颜色太深。

15.自选列表/字体大小核对
修复自选股全部书删除过后没有清除掉数据的问题

--- a/elapp/src/main/res/layout/item_market_list_stock.xml
+++ b/elapp/src/main/res/layout/item_market_list_stock.xml
@@ -39,6 +39,7 @@
         android:layout_alignLeft="@+id/tv_stock_name"
         android:layout_below="@+id/horizontal_center_line"
         android:text="SZ300104"
+        android:textColor="@color/text_warm_gray"
         android:textSize="14sp" />
 
     <TextView
