--- a/elapp/src/main/res/layout/activity_main.xml
+++ b/elapp/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@+id/rg_navigation"
-        android:background="@color/split_line_color" />
+        android:background="@color/list_divider_bg" />
 
     <RadioGroup
         android:id="@+id/rg_navigation"
