--- a/elapp/src/main/res/layout/fragment_home_market.xml
+++ b/elapp/src/main/res/layout/fragment_home_market.xml
@@ -25,4 +25,10 @@
         android:background="@drawable/shape_refresh_bg"
         android:padding="10dp"
         android:src="@drawable/btn_market_refresh_n" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@+id/layout_title"
+        android:background="@color/line_gray" />
 </RelativeLayout>
