--- a/elapp/src/main/res/values/theme.xml
+++ b/elapp/src/main/res/values/theme.xml
@@ -166,4 +166,8 @@
         <item name="android:gravity">center</item>
         <item name="height">@dimen/action_bar_status_bar_height</item>
     </style>
+
+    <style name="TabLayoutTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
