--- a/elapp/src/main/res/layout/activity_history.xml
+++ b/elapp/src/main/res/layout/activity_history.xml
@@ -20,6 +20,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/list_divider_bg"
             android:layout_marginTop="10dp"/>
     </LinearLayout>
 </LinearLayout>
