--- a/elapp/src/main/res/layout/activity_userinfo.xml
+++ b/elapp/src/main/res/layout/activity_userinfo.xml
@@ -5,12 +5,13 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/setting_page_background_color"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/setting_page_background_color"
+              android:fitsSystemWindows="true"
+              android:orientation="vertical"
+              android:baselineAligned="false">
 
     <include
         android:id="@+id/common_title_tv"
@@ -25,7 +26,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:background="@color/white"
-        android:paddingLeft="15dp"
+        android:paddingLeft="24dp"
         android:paddingRight="15dp">
 
         <TextView
@@ -224,10 +225,6 @@
             android:src="@drawable/ic_arrow_right_personal_more" />
     </RelativeLayout>
 
-    <ImageView
-        style="@style/default_horizontal_line_style"
-        android:layout_marginLeft="15dp" />
-
     <RelativeLayout
         android:id="@+id/user_info_constellation_rl"
         style="@style/item_user_info"
@@ -261,9 +258,6 @@
             android:src="@drawable/ic_arrow_right_personal_more" />
     </RelativeLayout>
 
-    <ImageView
-        style="@style/default_horizontal_line_style"
-        android:layout_marginLeft="15dp" />
 
     <RelativeLayout
         android:id="@+id/user_info_item_5"
