--- a/elapp/src/main/res/layout/item_common_news.xml
+++ b/elapp/src/main/res/layout/item_common_news.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="94dp"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+<RelativeLayout android:id="@+id/new_parent_layout"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="94dp"
+                android:background="@android:color/white"
+                android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_thumbnail"
@@ -11,7 +12,7 @@
         android:layout_height="73dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
-        android:src="@drawable/account_bitmap_list" />
+        android:src="@drawable/account_bitmap_list"/>
 
     <TextView
         android:id="@+id/tv_title"
@@ -21,10 +22,10 @@
         android:layout_marginLeft="14dp"
         android:layout_marginRight="16dp"
         android:layout_toRightOf="@+id/iv_thumbnail"
-        android:maxLines="2"
         android:ellipsize="end"
+        android:maxLines="2"
         android:text=""
-        android:textColor="@color/title_text_color" />
+        android:textColor="@color/title_text_color"/>
 
     <TextView
         android:id="@+id/tv_time"
@@ -34,7 +35,7 @@
         android:layout_alignLeft="@+id/tv_title"
         android:layout_toRightOf="@+id/iv_thumbnail"
         android:text=""
-        android:textColor="@color/text_color_gray" />
+        android:textColor="@color/text_color_gray"/>
 
     <TextView
         android:id="@+id/tv_watch_count"
@@ -44,13 +45,6 @@
         android:layout_alignTop="@+id/tv_time"
         android:layout_marginRight="20dp"
         android:text=""
-        android:textColor="@color/text_color_gray" />
+        android:textColor="@color/text_color_gray"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="11dp"
-        android:layout_marginRight="16dp"
-        android:background="#f0f0f0" />
 </RelativeLayout>
