--- a/elapp/src/main/res/layout/item_market_select_title.xml
+++ b/elapp/src/main/res/layout/item_market_select_title.xml
@@ -16,8 +16,7 @@
             android:layout_height="43dp"
             android:layout_weight="1"
             android:background="@color/white"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
+            android:gravity="center"
             android:text="名称"
             android:textColor="@color/text_color_gray"
             android:textSize="16sp" />
@@ -40,6 +39,7 @@
             android:background="@color/white"
             android:gravity="center"
             android:text="涨跌幅"
+            android:paddingRight="10dp"
             android:textColor="@color/text_color_gray"
             android:textSize="16sp" />
 
