--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -179,4 +179,6 @@
     <color name="vip_text">#672f87</color>
     <color name="fire_eyeballs_color">#ff6820</color>
 
+    <color name="f8f8f8">#f8f8f8</color>
+
 </resources>
