--- a/elapp/src/main/res/layout/activity_web_detail.xml
+++ b/elapp/src/main/res/layout/activity_web_detail.xml
@@ -104,7 +104,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/line_gray" />
+            android:background="@color/f8f8f8" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -164,10 +164,10 @@
             android:textSize="10sp"
             android:visibility="gone" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/line_gray" />
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/f8f8f8" />-->
     </RelativeLayout>
 
     <RelativeLayout
