--- a/elapp/src/main/res/layout/fragment_live_comment.xml
+++ b/elapp/src/main/res/layout/fragment_live_comment.xml
@@ -12,6 +12,7 @@
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
@@ -35,6 +36,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:layout_weight="4"
             android:background="@drawable/shape_chat_input_bg"
