--- a/elapp/src/main/res/layout/item_live_comment.xml
+++ b/elapp/src/main/res/layout/item_live_comment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <com.easyvaas.common.widget.RoundImageView
@@ -44,5 +45,5 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="16dp"
-        android:background="#f8f8f8" />
+        android:background="#f1f1f1" />
 </RelativeLayout>
