--- a/elapp/src/main/res/layout/view_important_news_header.xml
+++ b/elapp/src/main/res/layout/view_important_news_header.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/news_list_bg_color"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/news_list_bg_color"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/banner_layout"
-        layout="@layout/view_header_discover_slider"/>
+        layout="@layout/view_header_discover_slider" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="上证"/>
+                tools:text="上证" />
 
             <TextView
                 android:id="@+id/tv_exponent_number1"
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="20sp"
-                tools:text="3243.32"/>
+                tools:text="3243.32" />
 
             <TextView
                 android:id="@+id/tv_exponent_percent1"
@@ -47,14 +47,14 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/selector_exponent_state_color"
                 android:textSize="14sp"
-                tools:text="-5.5[-0.17%]"/>
+                tools:text="-5.5[-0.17%]" />
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="@color/base_gray"/>
+            android:background="@color/base_gray" />
 
         <LinearLayout
             android:id="@+id/ll_exponent2"
@@ -68,32 +68,32 @@
                 android:id="@+id/tv_exponent_name2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="深成"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                tools:text="深成" />
 
             <TextView
                 android:id="@+id/tv_exponent_number2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="11002.90"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                tools:text="11002.90" />
 
             <TextView
                 android:id="@+id/tv_exponent_percent2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="+27.53[+0.25%]"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                tools:text="+27.53[+0.25%]" />
         </LinearLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="49dp"
             android:layout_gravity="center_vertical"
-            android:background="@color/base_gray"/>
+            android:background="@color/base_gray" />
 
         <LinearLayout
             android:id="@+id/ll_exponent3"
@@ -107,25 +107,25 @@
                 android:id="@+id/tv_exponent_name3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="创业板"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                tools:text="创业板" />
 
             <TextView
                 android:id="@+id/tv_exponent_number3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="2163.42"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                tools:text="2163.42" />
 
             <TextView
                 android:id="@+id/tv_exponent_percent3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="-2.23[-0.10%]"
                 android:textColor="@color/selector_exponent_state_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                tools:text="-2.23[-0.10%]" />
         </LinearLayout>
     </LinearLayout>
 
@@ -154,7 +154,7 @@
                 android:drawablePadding="6dp"
                 android:text="@string/hooview_gold_eye"
                 android:textColor="@color/title_text_color"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_refresh_time"
@@ -166,7 +166,7 @@
                 android:text="11：00"
                 android:textColor="@color/text_color_gray"
                 android:textSize="14sp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_load_more"
@@ -178,7 +178,7 @@
                 android:layout_marginRight="16dp"
                 android:text="@string/load_more"
                 android:textColor="@color/text_color_gray"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </RelativeLayout>
 
         <LinearLayout
@@ -188,11 +188,13 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_1"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point"/>
+                android:src="@drawable/hooview_gold_eye_point" />
+
 
             <TextView
                 android:id="@+id/tv_eyes_news1"
@@ -205,7 +207,7 @@
                 android:maxLines="2"
                 android:text=""
                 android:textColor="@color/title_text_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
 
         <View
@@ -213,7 +215,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="11dp"
             android:layout_marginRight="16dp"
-            android:background="#f0f0f0"/>
+            android:background="#f0f0f0" />
 
         <LinearLayout
             android:id="@+id/ll_eye_new2"
@@ -222,11 +224,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_2"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point"/>
+                android:src="@drawable/hooview_gold_eye_point" />
 
             <TextView
                 android:id="@+id/tv_eyes_news2"
@@ -239,7 +242,7 @@
                 android:maxLines="2"
                 android:text=""
                 android:textColor="@color/title_text_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
 
         <View
@@ -247,7 +250,7 @@
             android:layout_height="1dp"
             android:layout_marginLeft="11dp"
             android:layout_marginRight="16dp"
-            android:background="#f0f0f0"/>
+            android:background="#f0f0f0" />
 
         <LinearLayout
             android:id="@+id/ll_eye_new3"
@@ -256,11 +259,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_3"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="12dp"
-                android:src="@drawable/hooview_gold_eye_point"/>
+                android:src="@drawable/hooview_gold_eye_point" />
 
             <TextView
                 android:id="@+id/tv_eyes_news3"
@@ -273,7 +277,7 @@
                 android:maxLines="2"
                 android:text=""
                 android:textColor="@color/title_text_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
