--- a/elapp/src/main/res/layout/layout_mask_second.xml
+++ b/elapp/src/main/res/layout/layout_mask_second.xml
@@ -9,14 +9,15 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="1dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/news" />
 
     <ImageView
         android:id="@+id/iv_tv"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_above="@+id/iv_mask"
-        android:layout_marginBottom="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
         android:layout_marginRight="64dp"
         android:background="@drawable/news_word"
         android:paddingLeft="-10dp" />
@@ -26,10 +27,10 @@
         android:id="@+id/iv_next"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_above="@+id/iv_tv"
+        android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/iv_tv"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginRight="28dp"
         android:background="@drawable/bt_hud_one" />
 
