--- a/elapp/src/main/res/layout/activity_web_detail.xml
+++ b/elapp/src/main/res/layout/activity_web_detail.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/title"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="48dp"/>
 
     <RelativeLayout
         android:id="@+id/rl_bottom_stock"
@@ -208,7 +208,7 @@
                 android:layout_height="match_parent"
                 android:layout_toLeftOf="@+id/iv_send"
                 android:gravity="center_vertical"
-                android:text="@string/stock_detail_chat_hint"/>
+                />
 
             <ImageView
                 android:id="@+id/iv_send"
@@ -216,7 +216,9 @@
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:padding="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="10dp"
+                android:padding="2dp"
                 android:src="@drawable/btn_send_comment"/>
         </RelativeLayout>
     </RelativeLayout>
