--- a/elapp/src/main/res/layout/item_news_my_stock.xml
+++ b/elapp/src/main/res/layout/item_news_my_stock.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#f8f8f8"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -26,15 +25,17 @@
         android:textColor="@color/title_text_color"
         android:textSize="16sp"/>
 
-    <LinearLayout
+    <com.nex3z.flowlayout.FlowLayout
         android:id="@+id/ll_stocks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="6dp"
-        android:orientation="horizontal">
-    </LinearLayout>
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:childSpacing="5dp"
+        app:childSpacingForLastRow="align"
+        app:rowSpacing="3dp" />
 
     <View
         android:layout_width="match_parent"
