1.修改支付界面 显示问题

--- a/elapp/src/main/res/layout/activity_cash_in.xml
+++ b/elapp/src/main/res/layout/activity_cash_in.xml
@@ -120,6 +120,7 @@
                 android:gravity="center"
                 android:padding="5dp"
                 android:text="@string/cash_in_option_weixin"
+                android:visibility="gone"
                 android:textColor="#59b64c" />
 
             <RadioButton
