--- a/elapp/src/main/res/layout/item_market_list_title.xml
+++ b/elapp/src/main/res/layout/item_market_list_title.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -7,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="@color/list_divider_bg" />
+        android:background="@color/list_divider_bg"/>
 
     <TextView
         android:id="@+id/tv_title"
@@ -18,10 +19,11 @@
         android:paddingLeft="16dp"
         android:text="@string/up_list_title"
         android:textColor="@color/text_color_gray"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/market_list_line1" />
+        android:background="@color/market_list_line1"/>
+
 </LinearLayout>
