--- a/elapp/src/main/res/layout/item_market_list_exponent.xml
+++ b/elapp/src/main/res/layout/item_market_list_exponent.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#f8f8f8"
+    android:background="#ffffff"
     android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingBottom="16dp"
+    android:paddingTop="16dp">
 
     <com.easyvaas.elapp.view.ExponentCellView
         android:id="@+id/exponent1"
