--- a/elapp/src/main/res/layout/item_market_list_title.xml
+++ b/elapp/src/main/res/layout/item_market_list_title.xml
@@ -7,19 +7,36 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="8dp"
         android:background="@color/list_divider_bg"/>
 
-    <TextView
-        android:id="@+id/tv_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="11dp"
         android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:text="@string/up_list_title"
-        android:textColor="@color/text_color_gray"
-        android:textSize="16sp"/>
+        android:paddingLeft="12dp"
+        android:paddingBottom="5dp">
+
+        <View
+            android:id="@+id/view_exponent"
+            android:layout_width="2dp"
+            android:layout_height="14dp"
+            android:background="@color/view_exponent_up"/>
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:text="@string/up_list_title"
+            android:textColor="@color/text_color_gray"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
