1.修改banner样式 动画效果 2.修改快讯header重复bug

--- a/elapp/src/main/res/layout/view_header_discover_slider.xml
+++ b/elapp/src/main/res/layout/view_header_discover_slider.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
+        android:visibility="gone"
         android:src="@drawable/account_bitmap_list" />
 
     <com.easyvaas.common.imageslider.SliderLayout
@@ -23,5 +24,6 @@
     <View
         android:background="@drawable/banner_mengceng"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </RelativeLayout>
