行情----全球修改完成，优化沪深、港股列表。

--- a/elapp/src/main/res/layout/fragment_market_main_layout.xml
+++ b/elapp/src/main/res/layout/fragment_market_main_layout.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/white"
-            android:orientation="horizontal"
-            app:layout_scrollFlags="scroll|snap|enterAlways">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/market_logo"
