--- a/elapp/src/main/res/layout/item_market_global_stock.xml
+++ b/elapp/src/main/res/layout/item_market_global_stock.xml
@@ -5,16 +5,6 @@
     android:layout_height="63dp"
     android:background="#fff">
 
-    <TextView
-        android:id="@+id/tv_tag"
-        android:layout_width="14dp"
-        android:layout_height="24dp"
-        android:layout_centerVertical="true"
-        android:background="@drawable/selector_stock_rank_tag"
-        android:gravity="center"
-        android:text="1"
-        android:textColor="@color/text_white"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,23 +17,21 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_national_flag"
+                android:layout_width="18dp"
+                android:layout_height="12dp"/>
 
             <TextView
                 android:id="@+id/tv_stock_name"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
+                android:layout_marginLeft="4dp"
                 android:text="N安车"
                 android:textColor="@color/market_list_stock_name"
                 android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/tv_stock_number"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="SZ300104"
-                android:textColor="@color/text_warm_gray"
-                android:textSize="14sp"/>
 
         </LinearLayout>
 
@@ -57,17 +45,22 @@
             android:textColor="@color/selector_stock_state_color"
             android:textSize="16sp"/>
 
-        <TextView
-            android:id="@+id/tv_percent"
-            android:layout_width="80dp"
-            android:layout_height="22dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:gravity="center|left"
-            android:text="4444.112%"
-            android:textColor="@color/selector_stock_state_color"
-            android:textSize="16sp"/>
+        <RelativeLayout
+            android:layout_width="80dip"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp">
+
+            <TextView
+                android:id="@+id/tv_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:layout_centerVertical="true"
+                android:gravity="center|left"
+                android:text="444.141%"
+                android:textColor="@color/selector_stock_state_color"
+                android:textSize="16sp"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -76,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="22dp"
         android:layout_marginRight="10dp"
         android:background="@color/split_line_color"/>
 
