--- a/elapp/src/main/res/layout/item_market_list_title.xml
+++ b/elapp/src/main/res/layout/item_market_list_title.xml
@@ -3,11 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffff">
+
+    <View
+        android:id="@+id/view_top_blank"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@color/list_divider_bg"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="4dp"
         android:background="@color/list_divider_bg"/>
 
     <LinearLayout
@@ -39,6 +46,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/market_list_title_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/market_list_line1"/>
