--- a/elapp/src/main/res/layout/item_market_select_title.xml
+++ b/elapp/src/main/res/layout/item_market_select_title.xml
@@ -6,6 +6,11 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="#f7f7f7"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="42dp"
@@ -19,7 +24,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center|left"
-            android:text="名称"
+            android:text="全部"
             android:textColor="@color/text_color_gray"
             android:textSize="16sp"/>
 
